# RAG_vs_CAG_analysis

./: RAG vs CAG with Llama3.1 8b model.ipynb  README.md  pyproject.toml  stepan_giga_summary_full.md
