[project]
name = "rag-vs-cag-analysis"
version = "0.1.0"
description = "Comparison of the RAG and the CAG algorithms."
authors = [
    {name = "Alex2135",email = "leha3521@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
transformers = "^4.48.1"
jupyterlab = ">=4.1.0,<5.0.0a0"
bitsandbytes = "^0.46.0"
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.11.0"
faiss-gpu = "^1.7.2"
matplotlib = "^3.10.3"
ipywidgets = "^8.1.7"
accelerate = "^1.7.0"
trl = "^0.18.1"
